Expand and refactor test cases for `AwardServiceTest`, `HpscImageServiceTest`, and `ImageServiceTest` to improve coverage with detailed assertions for responses, attributes, and CSV handling consistency.